...
        switch self {
        case .paragraph: "Text"
        case .heading1:  "Heading 1"
        case .heading2:  "Heading 2"
        case .heading3:  "Heading 3"
        case .todo:      "To-do"
        case .bullet:    "Bulleted list"
        case .numbered:  "Numbered list"
        case .quote:     "Quote"
        case .code:      "Code"
        case .divider:   "Divider"
        case .image:     "Image"
        }
...
